# raytrace

./: Cargo.toml  mytest.http
src/: lib.rs  main.rs  mydefault.rs  myreqwest.rs  myserde.rs  mythread.rs  traits_test.rs
