[package]
name = "raytrace"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
serde_json = "=1.0.1"
reqwest = { version = "0.12.23", features = ["blocking", "gzip", "http2", "json", "multipart", "socks", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
