[package]
name = "raytrace"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
serde_json = "=1.0.143"
reqwest = { version = "0.12.23", features = ["blocking", "gzip", "http2", "json", "multipart", "socks", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
rumqttc = "0.25.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql","sqlite"] }
sqlx_migrator = { version = "0.18.0", features=["sqlite"] }
rusqlite = "=0.32.1"
log4rs = { version = "1.4.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "time_trigger", "pattern_encoder", "gzip"] }
mysql = "26.0.1"
chrono = "0.4.42"